# image-pdf

./: .gitignore  README.md  prd.md  pubspec.yaml  test_stderr.dart
.github/workflows/: build_windows.yml  windows_build.yml
assets/i18n/: en.json  id.json
installer/: build_installer.bat  setup.iss
lib/: main.dart
lib/core/: constants.dart  localization.dart  theme.dart
lib/models/: models.dart
lib/presentation/controllers/: image_to_pdf_controller.dart  pdf_to_image_controller.dart  settings_controller.dart
lib/presentation/pages/: extract_pdf_page.dart  home_page.dart  image_to_pdf_page.dart  merge_pdf_page.dart  pdf_to_image_page.dart  settings_page.dart  word_to_image_page.dart
lib/presentation/widgets/: drop_zone_widget.dart  progress_widgets.dart
lib/services/: converter_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml  scratch.rs
rust/src/: image_to_pdf.rs  main.rs  pdf_manipulation.rs  pdf_to_image.rs
scripts/: build_engine.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc
